# adfmd

./: LICENSE  pyproject.toml  readme.md  requirements.txt
adfmd/: __init__.py  adfmd.py  cli.py  nodes.py
adfmd/converter/: __init__.py  adf2md.py  md2adf.py
test/: test_converter.py
test/data/: blockquote_simple.json  blockquote_simple.md  bullet_list_complex.json  bullet_list_complex.md  bullet_list_nested.json  bullet_list_nested.md  bullet_list_simple.json  code_block_simple.json  code_block_simple.md  date_complex.json  date_complex.md  date_simple.json  date_simple.md  doc_complex.json  doc_complex.md  doc_no_version.json  doc_no_version.md  doc_simple.json  doc_simple.md  emoji_simple.json  emoji_simple.md  expand.json  expand.md  hard_break_simple.json  hard_break_simple.md  heading_levels.json  heading_levels.md  heading_marks.json  heading_marks.md  heading_marks_complex.json  heading_marks_complex.md  heading_simple.json  heading_simple.md  inline_card_complex.json  inline_card_complex.md  inline_card_simple.json  inline_card_simple.md  link_complex.json  link_complex.md  link_simple.json  (+50 more)
