[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adfmd"
version = "0.1.0"
description = "Bidirectional converter between Atlassian Document Format (ADF) and Markdown"
readme = "readme.md"
authors = [
    {name = "Jonathan Winzig"}
]

[project.urls]
Repository = "https://github.com/jwinzig/adfmd"
Issues = "https://github.com/jwinzig/adfmd/issues"

[project.scripts]
adfmd = "adfmd.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adfmd*"]
